# MHSBoat

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh  package.xml  setup.cfg  setup.py
launch/: boat.launch.py
mhsboat/: boat_state.py  motors.py  sensors.py
mhsboat/sensors/: camera.py  yolo.py
msg/: YoloOutput.msg
src/boat_interfaces/: CMakeLists.txt  package.xml
src/mhsboat/: CMakeLists.txt  package.xml  setup.py
src/mhsboat/gui/: gui.py
src/mhsboat/launch/: boat.launch.py
src/mhsboat/mhsboat/: __init__.py  motors.py  task1.py  utils.py  yolo.py
