<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mhsboat</name>
  <version>0.0.0</version>
  <description>MHSeals Boat Scripts</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>GNU GPLv3</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Run dependencies -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>camera-ros</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <!-- Python dependencies -->
  <depend>pyyaml</depend>
  <depend>matplotlib</depend>
  <depend>scikit-learn</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>